# rules_copybara_ext

./: BUILD  CHANGELOG.org  MODULE.bazel  README.org  WORKSPACE  copybara.bzl  copybara_dependencies.bzl  extensions.bzl
